--- a/assets/main.css
+++ b/assets/main.css
@@ -123,6 +123,14 @@ a:active {
     background-image: linear-gradient(to right, transparent, #C96711, transparent);
 }
 
+.hr4 {
+    width: 100%;
+    margin: 5% 0;
+    border: 0;
+    height: 2px;
+    background-image: linear-gradient(to right, transparent, #C96711, transparent);
+}
+
 .email {
     font: inherit;
     font-size: inherit;
