--- a/assets/main.css
+++ b/assets/main.css
@@ -195,6 +195,13 @@ a:active {
     color: var(--dark-color);
 }
 
+.hyperlink{
+	text-decoration: underline;
+	color: blue;
+}
+
+
+
 #introImg {
     position: relative;
     right: 0;
